--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -134,9 +134,9 @@ Disease associated markers and their annotated genes were downloaded from the \g
 
 #### PCA analysis
 
-> talk about the nice groupings from the pca
+<!-- > talk about the nice groupings from the pca -->
 
-> need to explain why K = 6 for the rest of the analysis
+<!-- > need to explain why K = 6 for the rest of the analysis -->
 
 The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The admixture of the \gls{amr} populations was evident in \gls{pc} 1 with a large spread centered with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation.
 
@@ -172,21 +172,26 @@ eigen %>% filter(super_pop == 'POL') %>% ggplot(., aes(x = PC6, y = PC2, shape =
 There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data wasn't a major source of variability in the dataset. In the combined dataset the Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)).
 
 
-
+\FloatBarrier
 
 #### Admixture analysis
 
-> what does the admixture analysis add?
+<!-- > what does the admixture analysis add? -->
 
-> K = 11  from the use all data in the cross validation
+<!-- > K = 11  from the use all data in the cross validation -->
 
-> K = 9 in the remove the admixed populations and use the ancestral proportions to work out the proportions in the admixed pops
-
-Admixture analysis is another method to infer the number of ancestral populations that contribute to current populations by modelling the probability of the observed genotypes using proportions of ancestral populations and the population allele frequencies [@Alexsander2009] 
+<!-- > K = 9 in the remove the admixed populations and use the ancestral proportions to work out the proportions in the admixed pops -->
 
 
 
-There were two analyses for admixture that were undertaken. The first was using all of the populations to calculate the number of ancestral populations. Five-fold cross-validation was used to identify the K value with the lower cross-validation error. K = 11 had the lowest cross-validation error (Table \@ref(tab:admixCV)).
+
+Admixture analysis is a method that can be used to infer the number of ancestral populations that contribute to current populations by modelling the probability of the observed genotypes using proportions of ancestral populations and the population allele frequencies [@Alexander2009]. Proportions of theoretical ancestral populations for each population were calculated, using all of the populations to establish the number of ancestral populations (K), that resulted in the smallest cross-validation error. Five-fold cross-validation was used to calculate this error for K from 1 to 15. The K value with the lowest cross-validation error was K = 11, with an error of 0.3855 (Table \@ref(tab:admixCV)).  
+
+
+
+When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations, \gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, but also showed that there were sub-groups within the super-populations.
+
+
 
 
 ```{r admixData, echo = FALSE}
@@ -198,29 +203,24 @@ ref_fam <- left_join(ref_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN','PO
 ```
 
 
-(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE using K = 11.
+(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE, using K = 11. Ancestral population (AP) represents a particular theoretical ancestral population.
 
-```{r, echo = FALSE, fig.height = 9, fig.width = 6, fig.cap = '(ref:admix)'}
+```{r admix, echo = FALSE, fig.height = 9, fig.width = 6, fig.cap = '(ref:admix)'}
 # barplot of the reference proportions
-cbind(ref_fam, ref) %>% gather(., "V","Q",9:NCOL(.)) %>% mutate(V = forcats::as_factor(V)) %>% mutate(super_sample = paste0(super_pop,'_',sample), facet_pop = paste(super_pop, pop)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = V), width = 1) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 6, shrink = TRUE) + theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) 
+cols <- c('#a50026','#d73027','#f46d43','#fdae61','#fee090','#ffffbf','#e0f3f8','#abd9e9','#74add1','#4575b4','#313695')
+names(cols) <- paste0("AP", 1:11)
+cbind(ref_fam, ref%>% set_colnames(., paste0("AP", 1:NCOL(.))))  %>% gather(., "AP","Q",9:NCOL(.)) %>% mutate(AP = factor(AP, levels = paste0("AP", 1:11), ordered = TRUE)) %>% mutate(super_sample = paste0(super_pop,'_',sample), facet_pop = paste(super_pop, pop)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = AP), width = 1) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 6, shrink = TRUE) + theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) + scale_fill_brewer(type='div', palette = "Set3" )
 rm(ref,ref_fam)
 ```
 
 
 
-The second analysis used source populations of \gls{afr}, gls{eur}, \gls{eas}, \gls{sas} to calculate the 
-
- K = 9 provided the smallest error and so was used as the input reference ancestry proportions to be projected onto the populations of \gls{amr} and \gls{pol}.
-
-```{r, echo = FALSE, eval = TRUE}
-k_cv <- read.table('~/data/NZ_coreExome_1kgp/admixture/CV_error.txt', header = FALSE) %>% full_join(.,  read.table('~/data/NZ_coreExome_1kgp/admixture/projected/CV_error.txt', header = FALSE) %>% dplyr::rename( cv_proj = V2), by = "V1") %>% arrange(V1) %>% dplyr::rename(K = V1, "CV Error" = V2, "Projection CV Error" = cv_proj)
-
-knitr::kable(k_cv, caption = "(\\#tab:admixCV) Admixture cross-validation (CV) error for different values of K. Projection CV error is the admixture cross-validation error for different K values from projecting the components from 1000 Genomes Project populations of \\gls{afr}, \\gls{eas}, \\gls{eur}, and \\gls{sas} onto the populations of \\gls{amr} and \\gls{pol}.")
-```
 
 
 
-```{r admixDataProjection, echo = FALSE}
+
+
+```{r admixDataProjection, echo = FALSE, eval = FALSE}
 ref <- read.table('~/data/NZ_coreExome_1kgp/admixture/projected/reference_bootstrap.9.Q', stringsAsFactors = FALSE)
 ref_fam <- read.table('~/data/NZ_coreExome_1kgp/admixture/projected/reference.fam', header = FALSE, stringsAsFactors = FALSE)
 names(ref_fam) <- c('FID','sample','PID','MID','SEX','AFF')
@@ -232,7 +232,14 @@ names(study_fam) <- c('FID','sample','PID','MID','SEX','AFF')
 study_fam <- left_join(study_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN','POL')), by = 'sample')
 ```
 
+```{r, echo = FALSE, fig.height = 9, fig.width = 6, fig.cap = '(ref:admixProj)', eval = FALSE}
+#need to modify for K = 9
 
+# barplot of the reference proportions
+
+cbind(ref_fam, ref%>% set_colnames(., paste0("AP", 1:NCOL(.))))  %>% gather(., "AP","Q",9:NCOL(.)) %>% mutate(AP = factor(AP, levels = paste0("AP", 1:9), ordered = TRUE)) %>% mutate(super_sample = paste0(super_pop,'_',sample), facet_pop = paste(super_pop, pop)) %>% ggplot(., aes(x = super_sample, y = Q)) + geom_bar(stat = "identity", position = 'stack', aes(fill = AP), width = 1) + facet_wrap(super_pop~pop, scales = "free_x", ncol = 6, shrink = TRUE) + theme_bw() + theme(axis.title.x = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank()) + scale_y_continuous(expand = c(0,0)) + scale_fill_brewer(type='div', palette = "Set3" )
+rm(ref,ref_fam)
+```
 
 
 #### Whole chromosome clustering
@@ -241,7 +248,7 @@ Clustering on the full chromosome results for all chromosomes from PopGenome (Fi
 
 ```{r superGlobalSummary, echo = FALSE, results = 'asis'}
 global_super_summary <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/100kbwindows_summary_superpop_popgenome_filtered_3ns_resized.6-11-2017.RDS') %>% filter(stat != 'Fu.Li.D')
-global_super_summary %>%filter(stat != "n.segregating.sites") %>% mutate(stat = sapply(stat, stat_to_short)) %>% mutate(stat = sapply(stat, short_to_latex)) %>% kable(., caption ='(\\#tab:superGlobalSummary) Summary statistics for the intrapopulation frequency spectrum statistics by super population.', digits = 3, booktabs =TRUE, escape = FALSE, col.names = c("Super Population", "Statistic","Mean","SD","Min","1st Percentile","Median","99th Percentile","Max"), format = 'latex') %>% kableExtra::kable_styling(latex_options = 'scale_down')
+
 ```
 
 > need to reference table \@ref(tab:superGlobalSummary) somewhere in this chapter
@@ -271,12 +278,6 @@ multiplot(gene_dendros(gene_data = mat_d_list[['td_chr']]) + ggtitle("Tajima's D
 
 #### F~ST~ {#wholeFst}
 
-(ref:wholechrfst) _F~ST~_ Hierarchical clustering on chromosomal F~ST~ using Euclidean distance and complete linkage. Coloured by super population.
-
-```{r wholechrfst, fig.cap="(ref:wholechrfst)"}
-create_fst_dendro() + ggtitle(expression("Whole Chromosome F"["ST"]))
-#ggsave(last_plot(), file = 'images/04_clustering/fst_dendro.png')
-```
 
 
 ```{r}
@@ -289,6 +290,14 @@ fst_means <- fst_mat %>% filter(pop2 %in% c('CIM','NZM','SAM','TON')) %>% left_j
 
 
 Hierarchical clustering performed on the pair-wise F~ST~ for the whole chromosomes between each individual population grouped all of the super populations, except \gls{amr} into their correct groups (Figure \@ref(fig:wholechrfst)). The \gls{afr} populations were most similar to each other but least similar to the rest of the populations. The Polynesian populations were grouped together and were sub grouped into East and West Polynesian. The largest differentiation was between \gls{cim} and \gls{esn} (mean F~ST~ = 0.203), whereas the smallest differentiation was between \gls{ceu} and \gls{nzc} (mean F~ST~ = 3.42x10^-4^). The mean F~ST~ for \gls{pol} and \gls{afr} was `r fst_means %>% filter(sup2 == "POL", sup1 == "AFR") %>% select(mean) %>% sprintf('%.3f',.)`; \gls{pol} and \gls{amr} was `r fst_means %>% filter(sup2 == "POL", sup1 == "AMR") %>% select(mean) %>% sprintf('%.3f',.)`; \gls{pol} and \gls{eas} was `r fst_means %>% filter(sup2 == "POL", sup1 == "EAS") %>% select(mean) %>% sprintf('%.3f',.)`; \gls{pol} and \gls{eur} was `r fst_means %>% filter(sup2 == "POL", sup1 == "EUR") %>% select(mean) %>% sprintf('%.3f',.)`; \gls{pol} and \gls{sas} was `r fst_means %>% filter(sup2 == "POL", sup1 == "SAS") %>% select(mean) %>% sprintf('%.3f',.)`. This shows that the \gls{pol} populations were least differentiated from \gls{eas} populations and most from the \gls{afr} populations, which is consistent with the migration history.  
+
+(ref:wholechrfst) _F~ST~_ Hierarchical clustering on chromosomal F~ST~ using Euclidean distance and complete linkage. Coloured by super population.
+
+```{r wholechrfst, fig.cap="(ref:wholechrfst)"}
+create_fst_dendro() #+ ggtitle(expression("Whole Chromosome F"["ST"]))
+#ggsave(last_plot(), file = 'images/04_clustering/fst_dendro.png')
+```
+
 
 <!--
 some stats about the largest and smallest fsts and focus on the Polynesians
@@ -431,6 +440,8 @@ refer to figure
 ##### Tajima's _D_ distributions {#tdDist}
 
 The distributions of the genome-wide \gls{td} values showed that there were differences between each population (Figure \@ref(fig:tdDensity)). The \gls{td} means for the Polynesian populations were the smallest of the super populations at `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'POL', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`) with `r gs_td_table %>% filter(pop == 'CIM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'CIM') %>% .[["sd"]] %>% three_dp()`) for \gls{cim}, `r gs_td_table %>% filter(pop == 'NZM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'NZM') %>% .[["sd"]] %>% three_dp()`) for \gls{nzm}, `r gs_td_table %>% filter(pop == 'SAM') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'SAM') %>% .[["sd"]] %>% three_dp()`) for \gls{sam}, and `r gs_td_table %>% filter(pop == 'TON') %>% .[["mean"]] %>% three_dp()` (SD `r gs_td_table %>% filter(pop == 'TON') %>% .[["sd"]] %>% three_dp()`) for \gls{ton} (Table \@ref(tab:gsTdTable)). The means of the Polynesian populations were lower than all of the other populations except \gls{pel} and \gls{mxl}, indicating that overall the Polynesian populations had a higher proportion of low frequency to intermediate frequency variants. The \gls{sas} populations had the highest mean \gls{td} overall at `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["mean"]] %>% three_dp()` (SD `r global_super_summary %>% filter(super_pop == 'SAS', stat == 'Tajima.D') %>% .[["sd"]] %>% three_dp()`). The \gls{afr} populations were the only populations with the 1^st^ percentile above zero, but also had the smallest overall maximum value of `r global_super_summary %>% filter(super_pop == 'AFR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The \gls{eur} populations had the highest maximum \gls{td} value at `r global_super_summary %>% filter(super_pop == 'EUR', stat == 'Tajima.D') %>% .[["max"]] %>% three_dp()`. The smallest \gls{td} value of `r gs_td_table %>% filter(min(min) == min) %>% .[['min']] %>% three_dp()` came from the \gls{khv} population of the \gls{eas} super population. The \gls{afr} population had the smallest range (`r td_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['range']] %>% three_dp()`), whereas the \gls{eas} super population had the largest (`r td_super_pop_means %>% filter(super_pop == 'EAS') %>% .[['range']] %>% three_dp()`). The \gls{pol} population had the second largest (`r td_super_pop_means %>% filter(super_pop == 'POL') %>% .[['range']] %>% three_dp()`). A right shifted distribution of \gls{td} can be attributed to ascertainment bias from using a \gls{snp} array, where there is a bias against low frequency markers.
+
+
 
 ```{r tdDensity, fig.cap = '(ref:tdDensity)', echo = FALSE}
 knitr::include_graphics("images/04_clustering/td_densities.png")
